--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@stencil/store": "git+https://github.com/peterpeterparker/stencil-store.git#angular",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
